<resources>
    <string name="app_name">StoriesApp</string>
    <string name="histoires">Histoires</string>
    <string name="auteurs">Auteurs</string>
    <string name="categories">Categories</string>
    <string name="pays">Pays</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="recherche...">Recherche …</string>
    <string name="todo">TODO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ajouter_histoire">Ajouter histoire</string>
    <string name="t_l_charger_image">Télécharger image</string>
    <string name="titre">Titre …</string>
    <string name="le_contenu_de_l_histoire">Le contenu de l\'histoire ...</string>
    <string name="ajouter_l_auteur">Ajouter l\'auteur</string>
    <string name="ajouter_la_cat_gorie">Ajouter la catégorie</string>
    <string name="ajouter_le_pays">Ajouter le pays</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="ajouter">Ajouter</string>
    <string name="nom">Nom</string>
    <string name="annuler">Annuler</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer">Supprimer</string>
    <string name="origine">Origine :</string>
    <string name="delete_confirmation_title">Confirmation de suppression</string>
    <string name="modify_title">Modifier</string>
    <string name="delete_confirmation_message">Êtes-vous sûr de vouloir supprimer %1$s ?\nCette action est irréversible !!!</string>
    <string name="confirm">Confirmer</string>
    <string name="cancel">Annuler</string>
</resources>